--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 include_directories(../src)
 
 add_executable(test-vec test-vec.c)
-target_link_libraries(test-vec cmocka srrp)
+target_link_libraries(test-vec cmocka cvec)
 add_test(test-vec ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test-vec)
